--- a/Coeus.html
+++ b/Coeus.html
@@ -39,14 +39,17 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1" data-animation-name="customAnimationIn" data-animation-duration="4500"> Coeus<br>
         </h1>
-        <p class="u-text u-text-default u-text-2" data-animation-name="customAnimationIn" data-animation-duration="4500"> (pronounced “kee-yus”)</p>
+        <p class="u-text u-text-default u-text-2" data-animation-name="customAnimationIn" data-animation-duration="4500"></p>
       </div>
     </section>
     <section class="u-clearfix u-image u-parallax u-section-2" id="sec-7703" data-image-width="1899" data-image-height="1119">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-custom-font u-font-open-sans u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
           <span style="font-weight: 700;">
+            
             <br>Type: Dry, Desert type planet
+            <br>
+            (pronounced “kee-yus”)
           </span>
           <br>
           <br>
