--- a/Coeus.html
+++ b/Coeus.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-black u-clearfix u-header u-header" id="sec-1772"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1" data-image-width="1920" data-image-height="1415">
+        <a href="https://destination2022.github.io/home/" class="u-image u-logo u-image-1" data-image-width="1920" data-image-height="1415">
           <img src="images/synchlogofinal.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-custom-font u-font-open-sans u-text u-text-default u-text-1">Destination 2022</p>
