Final Version of the Destination Website
thanks and bye

--- a/Diaphanous.html
+++ b/Diaphanous.html
@@ -48,7 +48,7 @@
         <p class="u-custom-font u-font-open-sans u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><b>Type: Super-Earth, Rocky core-Ocean planet<br>A Teal Planet orbiting just right within the habitable zone of its system, Diaphanous is a Super-Earth with a radius 2.7 times of earth and 21.5 x 10^25 kgDue to its larger size and density, its gravity is 89m/sq.secSurface temperature of 10-20 degree Celsius.&nbsp;An orbital period of 289.9 earth days and rotation period of 2.87 earth days&nbsp;Orbital distance of 0.4 AUThe exoplanet’s corresponding star is a G type star, about half the mass and size of the Sun.</b>
         </p>
         <p class="u-custom-font u-font-open-sans u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000"><b>
-            <br>The atmosphere of the planet is oxygen rich making it ideal for human habitation as well (58.2% Nitrogen, 29.5% Carbon dioxide, 6.8% Carbon monoxide, 5.2% oxygen, 0.3% other)The entirety of the planet’s surface consists of water, a key requirement to host organic life.As of now, should any extraterrestrial life exist, it would be deep within the subsurface made of rock, present 40-800 metres below the water’s surface along with the presence of deep trenches as well.&nbsp;Due to the slightly eccentric orbit of the exo planet around its star, huge tides and tsunamis are frequently traversing around the planet at catastrophic heights (80-250 metres) and speeds, occuring once every 72 hours.&nbsp;At the moment, there is no evidence for life on the planet.</b>
+            <br>The atmosphere of the planet is oxygen rich making it ideal for human habitation as well (58.2% Nitrogen (N2), 29.5% Oxygen (O2), 6.8% Carbon Dioxide (CO2), 5.2% Methane (CH4), 0.3% other)</b>
         </p>
       </div>
     </section>
@@ -59,9 +59,7 @@
             <br>
             <br>1. As scientists of your space and research organisation, mention the steps you would take to send a manned mission (assume transport time to be 2-3 months) to the planet in order to set up a base for the 12 human astronauts given the oceanic surface of the planet.<br>
             <br>
-            <br>2. After your group of astronauts have successfully set up a base, as they proceed to explore the depths of the ocean, they find that a civilization of intelligent aquatic species reside within the trenches. The civilization is peaceful, where all its residents live under the rule of its single ‘King’ and have achieved scientific advancement to harness nuclear fusion, giving them almost limitless access to energy. Learning about how to achieve this feat is imperative to your team.<br>
-            <br>
-            <br>3. How would you proceed to introduce yourselves as members of a foreign species who have come to the planet in peace? Assuming that they speak and write a tongue that cannot be interpreted unless/until the native civilization decides to cooperate with you and your fellow astronauts.</b>
+            <br>2. After your group of astronauts have successfully set up a base, as they proceed to explore the depths of the ocean, they find that a civilization of intelligent aquatic species reside within the trenches. The civilization is peaceful, where all its residents live under the rule of its single ‘King’ and have achieved scientific advancement to harness nuclear fusion, giving them almost limitless access to energy. Learning about how to achieve this feat is imperative to your team. How would you proceed to introduce yourselves as members of a foreign species who have come to the planet in peace? Assuming that they speak and write a tongue that cannot be interpreted unless/until the native civilization decides to cooperate with you and your fellow astronauts.<br>
         </p>
       </div>
     </section>
