--- a/Strio.html
+++ b/Strio.html
@@ -55,7 +55,7 @@
             <span style="font-size: 4.5rem;">Questions:</span>
             <br>
             <br>1. Walkthrough the process necessary to make this planet hospitable to humans.<br>
-            <br>2. Do you, as a Astrophysicist of a research organisation, think the presence of a Binary Star system affects the prospect of mankind’s permanent settlement on this planet?&nbsp;<br></b>
+            <br>2. Do you, as an Astrophysicist of a space research organisation, think the presence of a Binary Star system affects the prospect of mankind’s permanent settlement on this planet? Elaborate&nbsp;<br></b>
         </p>
       </div>
     </section>
