--- a/Diaphanous.html
+++ b/Diaphanous.html
@@ -48,7 +48,10 @@
         <p class="u-custom-font u-font-open-sans u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><b>Type: Super-Earth, Rocky core-Ocean planet<br>A Teal Planet orbiting just right within the habitable zone of its system, Diaphanous is a Super-Earth with a radius 2.7 times of earth and 21.5 x 10^25 kgDue to its larger size and density, its gravity is 89m/sq.secSurface temperature of 10-20 degree Celsius.&nbsp;An orbital period of 289.9 earth days and rotation period of 2.87 earth days&nbsp;Orbital distance of 0.4 AUThe exoplanet’s corresponding star is a G type star, about half the mass and size of the Sun.</b>
         </p>
         <p class="u-custom-font u-font-open-sans u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000"><b>
-            <br>The atmosphere of the planet is oxygen rich making it ideal for human habitation as well (58.2% Nitrogen (N2), 29.5% Oxygen (O2), 6.8% Carbon Dioxide (CO2), 5.2% Methane (CH4), 0.3% other)</b>
+            <br>The atmosphere of the planet is oxygen rich making it ideal for human habitation as well (58.2% Nitrogen (N2), 29.5% Oxygen (O2), 6.8% Carbon Dioxide (CO2), 5.2% Methane (CH4), 0.3% other) The entirety of the planet’s surface consists of water, a key requirement to host organic life.
+            As of now, should any extraterrestrial life exist, it would be deep within the subsurface made of rock, present 40-800 metres below the water’s surface along with the presence of deep trenches as well. 
+            Due to the slightly eccentric orbit of the exo planet around its star, huge tides and tsunamis are frequently traversing around the planet at catastrophic heights (80-250 metres) and speeds, occuring once every 72 hours. 
+            At the moment, there is no evidence for life on the planet.</b>
         </p>
       </div>
     </section>
